--- a/gulp/package.json
+++ b/gulp/package.json
@@ -25,6 +25,7 @@
     "imagemin-mozjpeg": "^7.0.0",
     "imagemin-pngquant": "^5.0.1",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "node-reset-scss": "^1.0.1",
     "node-sass": "^4.9.0",
     "pngquant": "^1.3.0",
